[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-testing-tools"
version = "0.1.0"
description = "Small helpers for generating random data in tests."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Khaled Ahmed" }]
keywords = ["random", "testing", "fixtures"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
]
license = { file = "LICENSE" }
dependencies = ["rapidfuzz>=3.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
